# engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/common/: alias.h
src/core/filesystem/: filesystem.cpp  filesystem.h
src/engine/: engine.cpp  engine.h
src/engine/concurrency/: thread.h
src/graphics/: renderer.h
src/graphics/dx12/: dx12_renderer.cpp  dx12_renderer.h
src/graphics/opengl/: opengl_context_macos.mm  opengl_renderer.cpp  opengl_renderer.h
src/platform/: window.h
src/platform/macos/: window_macos.h  window_macos.mm
src/platform/windows/: window_win32.cpp  window_win32.h
src/shaders/: fragment_shader.glsl  shader.hlsl  vertex_shader.glsl
